<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/images"
tools:context=".SignInActivity">

<ImageView
    android:id="@+id/hotelLogo"
    android:layout_width="248dp"
    android:layout_height="194dp"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/index" />

<TextView
    android:id="@+id/pleaseLoginTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/create_new_account"
    android:textColor="#F2D16B"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/hotelLogo" />

<EditText
    android:id="@+id/usernameEditText"
    android:layout_width="262dp"
    android:layout_height="45dp"
    android:layout_marginTop="35dp"
    android:background="#FF000000"
    android:ems="10"
    android:fontFamily="@font/aclonica"
    android:hint="@string/username"
    android:inputType="textPersonName|textNoSuggestions"
    android:padding="10dp"
    android:textColor="#FFFFFF"
    android:textColorHint="#FFFFFF"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/pleaseLoginTextView" />

<EditText
    android:id="@+id/userNameEditText"
    android:layout_width="262dp"
    android:layout_height="45dp"
    android:layout_marginTop="20dp"
    android:background="#FF000000"
    android:ems="10"
    android:fontFamily="@font/aclonica"
    android:hint="@string/email"
    android:inputType="textEmailAddress|textNoSuggestions"
    android:padding="10dp"
    android:textColor="#FFFFFF"
    android:textColorHint="#FFFFFF"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
    app:layout_constraintStart_toStartOf="@+id/usernameEditText"
    app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

<EditText
    android:id="@+id/mobilenumberEditText"
    android:layout_width="262dp"
    android:layout_height="45dp"
    android:layout_marginTop="20dp"
    android:background="#FF000000"
    android:ems="10"
    android:fontFamily="@font/aclonica"
    android:hint="@string/number"
    android:inputType="phone|textNoSuggestions"
    android:padding="10dp"
    android:textColor="#FFFFFF"
    android:textColorHint="#FFFFFF"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/userNameEditText"
    app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

<EditText
    android:id="@+id/passwordEditText"
    android:layout_width="262dp"
    android:layout_height="45dp"
    android:layout_marginTop="20dp"
    android:background="#FF000000"
    android:ems="10"
    android:fontFamily="@font/aclonica"
    android:hint="@string/password"
    android:inputType="textPassword|textNoSuggestions"
    android:padding="10dp"
    android:textColor="#FFFFFF"
    android:textColorHint="#FFFFFF"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="@+id/mobilenumberEditText"
    app:layout_constraintStart_toStartOf="@+id/mobilenumberEditText"
    app:layout_constraintTop_toBottomOf="@+id/mobilenumberEditText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/aclonica"
        android:text="@string/register"
        android:textColor="#FF000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
    android:id="@+id/loginPageIntentTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_page_intent"
    android:textColor="#000000"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/registerButton" />

<ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="57dp"
    android:layout_height="60dp"
    android:visibility="invisible"
    app:layout_constraintBottom_toTopOf="@+id/mobilenumberEditText"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>